app/kube_script/filerun.yaml
apiVersion: v1
kind: Service
metadata:
 name: filerun
 labels:
   app: filerun
spec:
 type: NodePort
 selector:
   app: filerun
 ports:
 - name: filerun
   protocol: TCP
   port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: filerun
spec:
  hosts:
  - $USER_ID.filerun.app.ksc.re.kr
  gateways:
  - default/blue-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: filerun
        port:
          number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: filerun
 labels:
   app: filerun
spec:
 replicas: 1
 selector:
   matchLabels:
     app: filerun
 template:
   metadata:
     labels:
       app: filerun
   spec:
     containers:
     - image:  mariadb:10.1
       name: mariadb
       ports:
       - containerPort: 3306
         name: mariadb
     - name: filerun
       image: jwpark/filerun:base-00
       ports:
       - containerPort: 80
       volumeMounts:
       - name: home-volume
         mountPath: /user-files/home
       - name: scratch-volume
         mountPath: /user-files/scratch
     volumes:
     - name: home-volume
       hostPath:
         path: /home01/$USER_ID
         type: Directory
     - name: scratch-volume
       hostPath:
         path: /scratch/$USER_ID
         type: Directory
